# VMAG

./: .gitignore  CMakeLists.txt  Makefile  cost.h  knapsack.cpp  knapsack.h  level.cpp  level.h  main  main.cpp  main.hpp  note.txt  range.cpp  range.h  util.cpp  util.h  vmag.cpp  vmag.h  vmag.hpp  vmag_ds.cpp  vmag_ds.hpp  vmagc.cpp  vmagc.h
src/: cost.h  knapsack.cpp  knapsack.h  level.cpp  level.h  range.cpp  range.h  util.cpp  util.h  vmag.cpp  vmag.h  vmag_config.h  vmag_ds.cpp  vmagc.cpp  vmagc.h
test/: CMakeLists.txt  get_pattern  get_pattern.cpp  server  vmag.cpp
test/knapsack/: test1  test1.cpp
test/test1/: user.txt
test/test2/: slot.txt  user.txt
test/test3/: user.txt
test/test4/: slot.txt
test/testknapsack/: CMakeLists.txt  testknapsack.cpp  testknapsack.h
test/testlevel/: CMakeLists.txt  testlevel.cpp  testlevel.h
test/testvmagc/: CMakeLists.txt  main.cpp  testvmagc.cpp  testvmagc.h  user.txt
